--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,12 +3,11 @@
   "compilerOptions": {
     "strict": true,
     "paths": {
-      "@/*": [
-        "./*"
-      ]
-    }
+      "@/*": ["./*"]
+    },
+    "types": ["jest", "node"],
+    "jsx": "react-jsx"
   },
-  
   "include": [
     "**/*.ts",
     "**/*.tsx",
