--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
     "strict": true,
     "paths": {
       "@/*": ["./*"]
@@ -14,4 +16,5 @@
     ".expo/types/**/*.ts",
     "expo-env.d.ts"
   ]
+
 }
